# wild-memory

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  wild_memory.yaml
.github/workflows/: ci.yml
dashboard/: README.md  blueprint.py
dashboard/static/: wild_memory.css  wild_memory.js
dashboard/templates/: ant.html  bee.html  chameleon.html  dolphin.html  elephant.html  overview.html  salmon.html  setup.html  wild_memory_base.html
docs/: PROPOSTA_WILD_MEMORY.md  WILD_MEMORY_INSTALLATION_REPORT.md  architecture.md  backends.md  providers.md  quickstart.md
examples/: 01_quickstart_sqlite.py  02_postgres.py  03_custom_provider.py
integration_examples/: closi_adapter.py  context_injector.py  lifecycle_hooks.py  shadow_observer.py
memory/: imprint.yaml
memory/procedures/: lead_qualification.md
migrations/: 002_wild_memory_schema.sql
tests/: conftest.py  test_imports.py  test_phase2_shadow.py  test_phase3_context.py  test_phase4_lifecycle.py  test_wild_memory_setup.py
tests/providers/: test_anthropic_translate.py
tests/store/: test_interface.py  test_parity.py  test_sqlite_smoke.py
tests/studio/: test_blueprint.py  test_kits.py
wild_memory/: __init__.py  cli.py  config.py  init_medreview.py  medreview_domain.py  models.py  orchestrator.py  tools.py
wild_memory/audit/: citation_logger.py  memory_audit.py
wild_memory/dashboard/: __init__.py  adapter.py  blueprint.py
wild_memory/dashboard/static/: wild_memory.css
wild_memory/dashboard/templates/: ant.html  bee.html  chameleon.html  dolphin.html  elephant.html  overview.html  salmon.html  setup.html  wild_memory_base.html
wild_memory/infra/: __init__.py  checkpoint.py  db.py  embedding_cache.py  model_router.py  semantic_cache.py
wild_memory/layers/: entity_graph.py  feedback.py  imprint.py  observation.py  procedural.py  reflection.py  working.py
wild_memory/processes/: ant_decay.py  bee_distiller.py  distillation_gate.py  ner_pipeline.py  session_logger.py
wild_memory/prompts/: conflict.py  detect_goal.py  distill.py  reflect.py
wild_memory/providers/: __init__.py  anthropic_llm.py  base.py  openai_embedding.py
wild_memory/retrieval/: briefing_builder.py  briefing_cache.py  conflict_resolver.py  dynamic_recall.py  elephant_recall.py  goal_cache.py
wild_memory/store/: __init__.py  _supabase_legacy.py  base.py  postgres.py  scoring.py  sqlite.py
wild_memory/store/migrations/postgres/: 001_extensions.sql  002_schema.sql.j2
wild_memory/store/migrations/sqlite/: 001_schema.sql.j2  002_indexes.sql
wild_memory/studio/: __init__.py  blueprint.py
wild_memory/studio/kits/: __init__.py  fakes.py  kit1_smoke.py  kit2_lifecycle.py  kit3_scale.py  reports.py  runner.py
wild_memory/studio/static/: studio.css  studio.js
wild_memory/studio/templates/: kits.html
wild_memory/templates/: imprint.yaml  wild_memory.yaml.j2
wild_memory/templates/procedures/: example_workflow.md
