[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wild-memory"
version = "3.0.0"
description = "Biomimetic Memory Framework for AI Agents — inspired by 6 animals with extraordinary memory"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Raphael Romie", email = "raphaelromie@gmail.com"}
]
keywords = ["ai", "memory", "agents", "biomimetic", "llm"]

dependencies = [
    "anthropic>=0.50.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "supabase>=2.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dashboard = ["flask>=3.0.0"]
scheduler = ["apscheduler>=3.10.0,<4.0.0"]
all = ["flask>=3.0.0", "apscheduler>=3.10.0,<4.0.0"]

[project.scripts]
wild-memory = "wild_memory.cli:main"

[tool.setuptools.packages.find]
include = ["wild_memory*"]

[tool.setuptools.package-data]
"wild_memory.dashboard" = ["templates/*.html", "static/*.css", "static/*.js"]
